# hand_tracking

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CMakeLists.txt  LICENSE  README.md  hand_tracking_publisher.cpp  hand_tracking_publisher.hpp  index.html  index.md.in  plugin.cpp  plugin.hpp  search.html  sitemap.xml
docs/: CMakeLists.txt  Doxyfile.in  mkdocs.yaml.in
docs/docs/: index.md
mediapipe/: CMakeLists.txt  LICENSE  demo_run_graph_main_gpu.cc  hand_tracking_publisher.hpp  protobuf.cmake  simple_subgraph_template.cc.in
mediapipe/calculators/: build.cmake  protobuf.cmake
mediapipe/calculators/core/: begin_loop_calculator.cc  begin_loop_calculator.h  build.cmake  clip_vector_size_calculator.cc  clip_vector_size_calculator.h  constant_side_packet_calculator.cc  end_loop_calculator.cc  end_loop_calculator.h  flow_limiter_calculator.cc  gate_calculator.cc  immediate_mux_calculator.cc  merge_calculator.cc  packet_inner_join_calculator.cc  packet_sequencer_calculator.cc  previous_loopback_calculator.cc  protobuf.cmake  split_vector_calculator.cc  split_vector_calculator.h
mediapipe/calculators/image/: build.cmake  image_properties_calculator.cc
mediapipe/calculators/internal/: build.cmake  callback_packet_calculator.cc  callback_packet_calculator.h  protobuf.cmake
mediapipe/calculators/tensor/: build.cmake  image_to_tensor_calculator.cc  image_to_tensor_converter.h  image_to_tensor_converter_gl_buffer.cc  image_to_tensor_converter_gl_buffer.h  image_to_tensor_converter_gl_texture.cc  image_to_tensor_converter_gl_texture.h  image_to_tensor_converter_gl_utils.cc  image_to_tensor_converter_gl_utils.h  image_to_tensor_converter_opencv.cc  image_to_tensor_converter_opencv.h  image_to_tensor_utils.cc  image_to_tensor_utils.h  inference_calculator.cc  inference_calculator.h  inference_calculator_cpu.cc  inference_calculator_gl.cc  inference_calculator_gl_advanced.cc  inference_calculator_utils.cc  inference_calculator_utils.h  inference_feedback_manager.cc  inference_feedback_manager.h  inference_interpreter_delegate_runner.cc  inference_interpreter_delegate_runner.h  inference_io_mapper.cc  inference_io_mapper.h  inference_runner.h  protobuf.cmake  tensor_span.cc  tensor_span.h  tensors_to_classification_calculator.cc  tensors_to_detections_calculator.cc  tensors_to_floats_calculator.cc  tensors_to_landmarks_calculator.cc  tflite_delegate_ptr.h
mediapipe/calculators/tflite/: build.cmake  protobuf.cmake  ssd_anchors_calculator.cc  tflite_custom_op_resolver_calculator.cc  tflite_model_calculator.cc
mediapipe/calculators/util/: annotation_overlay_calculator.cc  association_calculator.h  association_norm_rect_calculator.cc  build.cmake  collection_has_min_size_calculator.cc  collection_has_min_size_calculator.h  detection_letterbox_removal_calculator.cc  detections_to_rects_calculator.cc  detections_to_rects_calculator.h  detections_to_render_data_calculator.cc  filter_collection_calculator.cc  filter_collection_calculator.h  illixr_data.h  illixr_data.proto  illixr_output_calculator.cc  illixr_output_calculator.h  image_data.proto  labels_to_render_data_calculator.cc  landmark_letterbox_removal_calculator.cc  landmark_projection_calculator.cc  landmarks_to_render_data_calculator.cc  landmarks_to_render_data_calculator.h  local_file_contents_calculator.cc  non_max_suppression_calculator.cc  protobuf.cmake  rect_to_render_data_calculator.cc  rect_transformation_calculator.cc  render_and_points.proto  thresholding_calculator.cc  (+1 more)
mediapipe/framework/: build.cmake  calculator.proto  calculator_base.cc  calculator_base.h  calculator_context.cc  calculator_context.h  calculator_context_manager.cc  calculator_context_manager.h  calculator_contract.cc  calculator_contract.h  calculator_framework.h  calculator_graph.cc  calculator_graph.h  calculator_node.cc  calculator_node.h  calculator_profile.proto  calculator_registry.h  calculator_state.cc  calculator_state.h  collection.h  collection_item_id.cc  collection_item_id.h  counter.h  counter_factory.cc  counter_factory.h  delegating_executor.cc  delegating_executor.h  demangle.h  executor.cc  executor.h  graph_output_stream.cc  graph_output_stream.h  graph_service.h  graph_service_manager.cc  graph_service_manager.h  input_side_packet_handler.cc  input_side_packet_handler.h  input_stream.h  input_stream_handler.cc  input_stream_handler.h  (+49 more)
mediapipe/framework/api/: node.cc  (+10 more)
mediapipe/gpu/: attachments.h  build.cmake  frame_buffer_view.h  gl_base.h  gl_calculator_helper.cc  gl_calculator_helper.h  gl_context.cc  gl_context.h  gl_context_egl.cc  gl_context_internal.h  gl_simple_shaders.cc  gl_simple_shaders.h  gl_texture_buffer.cc  gl_texture_buffer.h  gl_texture_buffer_pool.cc  gl_texture_buffer_pool.h  gl_texture_view.cc  gl_texture_view.h  gl_thread_collector.h  gpu_buffer.cc  gpu_buffer.h  gpu_buffer_format.cc  gpu_buffer_format.h  gpu_buffer_multi_pool.cc  gpu_buffer_multi_pool.h  gpu_buffer_storage.cc  gpu_buffer_storage.h  gpu_buffer_storage_image_frame.cc  gpu_buffer_storage_image_frame.h  gpu_service.cc  gpu_service.h  gpu_shared_data_internal.cc  gpu_shared_data_internal.h  graph_support.h  image_frame_view.h  multi_pool.h  protobuf.cmake  reusable_pool.h  shader_util.cc  shader_util.h
mediapipe/graphs/: build.cmake
mediapipe/modules/: build.cmake
mediapipe/util/: CMakeLists.txt  annotation_renderer.cc  annotation_renderer.h  build.cmake  cpu_util.cc  cpu_util.h  header_util.cc  header_util.h  protobuf.cmake  rectangle_util.cc  rectangle_util.h  render_data.proto  resource_cache.h  resource_util.cc  resource_util.h  resource_util_custom.h  resource_util_default.cc  resource_util_internal.h  unused.hpp
openxr/: CMakeLists.txt  illixr_ht.json  illixr_ht.json.in  interface.cpp  interface.h  ixr_openxr.hpp  openxr.c  openxr.cpp  openxr.h  oxr_objects.h
openxr/test/: CMakeLists.txt  func.c  func.h  gl.c  gl.h  macro.c  macro.h  struct.h  test.c
src/: CMakeLists.txt  protobuf.cmake
src/calculators/: protobuf.cmake
src/framework/: protobuf.cmake
src/gpu/: protobuf.cmake
src/util/: protobuf.cmake
(+5273 files in other folders)
